examples/cilium/starwars-demo/http-sw-app.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: galaxy
---
apiVersion: v1
kind: Service
metadata:
  name: deathstar
  namespace: galaxy
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    org: empire
    class: deathstar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deathstar
  namespace: galaxy
spec:
  replicas: 2
  selector:
    matchLabels:
      org: empire
      class: deathstar
  template:
    metadata:
      labels:
        org: empire
        class: deathstar
        app.kubernetes.io/name: deathstar
    spec:
      containers:
      - name: deathstar
        image: docker.io/cilium/starwars
---
apiVersion: v1
kind: Pod
metadata:
  name: tiefighter
  namespace: galaxy
  labels:
    org: empire
    class: tiefighter
    app.kubernetes.io/name: tiefighter
spec:
  containers:
  - name: spaceship
    image: docker.io/tgraf/netperf
---
apiVersion: v1
kind: Pod
metadata:
  name: xwing
  namespace: galaxy
  labels:
    org: alliance
    class: xwing
    app.kubernetes.io/name: xwing
spec:
  containers:
  - name: spaceship
    image: docker.io/tgraf/netperf
