examples/cilium/starwars-demo/sw_deny_cnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: empire-default-deny
  namespace: galaxy
spec:
  description: "Default-deny ingress policy for the empire"
  endpointSelector:
    matchLabels:
      org: empire
  ingress:
  - {}
